ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyName2/input.ts.stderr
error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyName2/input.ts:2:5
  |
2 |     `abc${ 123 }def${ 456 }ghi`: 321
  |     ^

